# Longitude

./: .coveragerc  .drone.yml  .env.sample  .gitignore  =1.3  Dockerfile  Jenkinsfile  LICENSE  MANIFEST.in  Pipfile  README.md  docker-compose.yml  generate_core_coverage.sh  pyproject.toml  requirements.txt  setup.py  tox.ini
core/: data_source.py
core/caches/: base.py  ram.py  redis.py
core/data_sources/: base.py  carto.py  postgre.py  postgres.py
core/samples/: carto_sample.py
core/tests/: test_base_data_source.py  test_cache_base.py  test_cache_redis.py  test_carto_data_source.py  test_data_source.py  test_data_source_base.py  test_data_source_postgres.py
core/tests/raw_text/: query_response_render_top.txt
db/: auth_users.sql
longitude/: auth.py  config.py
longitude/aiohttp/: carto_oauth2_client.py
longitude/core/caches/: base.py  ram.py  redis.py
longitude/core/common/: README.md  config.py  exceptions.py  helpers.py  query_response.py  schemas.py
longitude/core/data_sources/: README.md  base.py  base_async.py  carto.py  carto_async.py
longitude/core/rest_api/: README.md  base.py  flask.py
longitude/core/tests/: test_api_base.py  test_api_flask.py  test_cache_base.py  test_cache_ram.py  test_cache_redis.py  test_configurable.py  test_data_source_base.py  test_data_source_carto.py  test_data_source_postgres.py  test_data_source_sqlalchemy.py  test_environment_config.py  test_environment_configuration_dictionary.py  test_helpers.py
longitude/credential/: model.py  routes.py
longitude/credential/migrations/: 20180320_1818_c6a61e3cc7ec_init_credentials.py
longitude/migration/: command.py  env.py  readme.md
longitude/models/: __init__.py  cartomodel.py  database_model.py  postgresqlmodel.py  user_model.py  usermodel.py  utils.py
longitude/models/base_models/: __init__.py  carto_model.py  database_base_model.py  postgres_model.py
longitude/models/user/: __init__.py  abstract_user_model.py  carto_user_model.py  postgres_user_model.py
longitude/samples/: .gitignore  README.md  aiohttp_oauth2_login.py  carto_async_sample.py  carto_sample.py  carto_sample_with_ram_cache.py  carto_sample_with_redis_cache.py  config.py  copy_from_sample.py  demo_data.csv  flask_api_sample.py  mixed_datasources.py  postgres_sample.py  sqlalchemy_sample.py  sqlalchemy_sample_config.py
longitude/tools/oauth/: carto_oauth2_client_aiohttp.py
src/core/caches/: base.py  ram.py  (+1 more)
src/samples/: .gitignore  carto_sample.py  carto_sample_with_ram_cache.py  carto_sample_with_redis_cache.py  mixed_datasources.py  postgres_sample.py  sqlalchemy_sample.py
tests/: test_carto_data_source.py  test_data_source.py  test_postgre_data_source.py
(+31 files in other folders)
