[tool.poetry]
name = "geographica-longitude"
packages = [
    { include='longitude' }
]
version = "0.9.5"
description = "A longitudinal lib"
authors = ["Geographica <hello@geographica.com>"]
homepage = "https://github.com/GeographicaGS/Longitude"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.5"
aredis = "^1.1"
asyncio = "^3.4"
carto = "1.4"
cartoframes = "^0.9.0"
geolibs-cartoasync = "^0.0.4"
pandas = "^0.24.1"
psycopg2-binary = "2.7.7"
redis = "3.1"
sqlalchemy = "^1.3"
pyjwt = "^1.7"
aioauth-client = "^0.16.2"
environs = "^5.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
jupyterlab = "^0.35.6"
pytest = "^4.5"
pytest-cov = "^2.7"
pytest-sugar = "^0.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
