[tool.poetry]
name = "geographica-longitude"
packages = [
    { include='longitude' }
]
version = "0.10.0"
description = "A longitudinal lib"
authors = ["Geographica <hello@geographica.com>"]
homepage = "https://github.com/GeographicaGS/Longitude"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.5"
aredis = "^1.1"
asyncio = "^3.4"
cartoframes = "^0.9.0"
geolibs-cartoasync = "^0.0.4"
pandas = "^1.1"
sqlalchemy = ">=1.1.15, <2.0.0"
pyjwt = "^1.7"
aioauth-client = "^0.16.2"
environs = "^5.0"
psycopg2-binary = "^2.8"
redis = "^3.2"
carto = "^1.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
jupyterlab = "^0.35.6"
pytest = "^4.5"
pytest-cov = "^2.7"
pytest-sugar = "^0.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
